--- a/PreOrclFrontEnd/Views/Auth/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Auth/Index.cshtml
@@ -79,14 +79,14 @@
                             <span asp-validation-for="Password" class="text-danger"></span>
                         </div>
 
-                        <div class="checkbox">
+                        @*<div class="checkbox">
                             <label>
                                 <input type="checkbox"> Recordar
                             </label>
                             <label class="pull-right">
                                 <a href="#">¿Recuperar Contraseña?</a>
                             </label>
-                        </div>
+                        </div>*@
                         <button type="submit" value="Ingresar" class="btn btn-success btn-flat m-b-30 m-t-30">Iniciar Sesión</button>
                         <div class="social-login-content">
                             <div class="social-button">
