Mejoras finales del sistema

--- a/PreOrclFrontEnd/Views/Casos/Edit.cshtml
+++ b/PreOrclFrontEnd/Views/Casos/Edit.cshtml
@@ -217,7 +217,7 @@
                                 </div>
                             </div>
                             <input asp-for="Casos.IdCaso" type="hidden" />
-
+                            <input asp-for="Casos.IdCreador" type="hidden" />
                             <input asp-for="Casos.CreatedAt" type="hidden" />
                             <input asp-for="Casos.UpdatedAt" type="hidden" />
                             <input asp-for="Casos.InactivatedAt" type="hidden" />
