--- a/PreOrclFrontEnd/Views/Usuarios/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Usuarios/Index.cshtml
@@ -81,45 +81,45 @@
                                             <tbody>
                                                 @foreach (var item in Model)
                                                 {
-                                                <tr role="row">
-                                                    <td class="sorting_1">
-                                                        @Html.DisplayFor(modelItem => item.Usuarios.Nombre)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.Usuarios.Apellido)
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.Usuarios.Usuario)
-                                                    </td>
-                                                    <td>
-                                                        @item.Usuarios.Inactivo.ToString().Replace("0", "No").Replace("1", "Sí")
-                                                    </td>
-                                                    <td>
-                                                        @item.Usuarios.TipoUsuario.ToString().Replace("I", "Interno").Replace("E", "Externo")
-                                                    </td>
-                                                    <td>
-                                                        @Html.DisplayFor(modelItem => item.Roles.NombreRol)
-                                                    </td>
-                                                    <td>
-                                                        <div class="row">
-                                                            @*<div class="col-sm-3">
-            <a asp-action="Edit" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa fa-edit" style="color:forestgreen"></i></a>
-        </div>
-        <div class="col-sm-3">
-            <a href="#" data-toggle="modal" data-target="#largeModal" onclick="modalShow({'NameModalPartial':'#largeModalPartial','Url':'@Url.Action("DetailsPartial","SisPerPersonas")','Id':@item.IdUsuario})" title="ver detalle"><i class="fa fa-file-text" style="color:blue"></i></a>
+                                                    <tr role="row">
+                                                        <td class="sorting_1">
+                                                            @Html.DisplayFor(modelItem => item.Usuarios.Nombre)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.Usuarios.Apellido)
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.Usuarios.Usuario)
+                                                        </td>
+                                                        <td>
+                                                            @item.Usuarios.Inactivo.ToString().Replace("0", "No").Replace("1", "Sí")
+                                                        </td>
+                                                        <td>
+                                                            @item.Usuarios.TipoUsuario.ToString().Replace("I", "Interno").Replace("E", "Externo")
+                                                        </td>
+                                                        <td>
+                                                            @Html.DisplayFor(modelItem => item.Roles.NombreRol)
+                                                        </td>
+                                                        <td>
+                                                            <div class="row">
+                                                                @*<div class="col-sm-3">
+                                                                        <a asp-action="Edit" asp-route-id="@item.IdUsuario" title="Editar"><i class="fa fa-edit" style="color:forestgreen"></i></a>
+                                                                    </div>
+                                                                    <div class="col-sm-3">
+                                                                        <a href="#" data-toggle="modal" data-target="#largeModal" onclick="modalShow({'NameModalPartial':'#largeModalPartial','Url':'@Url.Action("DetailsPartial","SisPerPersonas")','Id':@item.IdUsuario})" title="ver detalle"><i class="fa fa-file-text" style="color:blue"></i></a>
 
-        </div>*@
-                                                            <div class="col-sm-3">
-                                                                <a href="#" data-toggle="modal" data-target="#smallmodal" onclick="modalShow({'NameModalPartial':'#smallModalPartial','Url':'@Url.Action("InactivateOrActivatePartial","Usuarios")','Id':@item.Usuarios.IdUsuario})" title="Inactivar"><i class="fa fa-eraser" style="color:forestgreen"></i></a>
+                                                                    </div>*@
+                                                                <div class="col-sm-3">
+                                                                    <a href="#" data-toggle="modal" data-target="#smallmodal" onclick="modalShow({'NameModalPartial':'#smallModalPartial','Url':'@Url.Action("InactivateOrActivatePartial","Usuarios")','Id':@item.Usuarios.IdUsuario})" title="Inactivar"><i class="fa fa-eraser" style="color:forestgreen"></i></a>
+                                                                </div>
+
+                                                                <div class="col-sm-3">
+                                                                    <a href="#" data-toggle="modal" data-target="#smallmodal" onclick="modalShow({'NameModalPartial':'#smallModalPartial','Url':'@Url.Action("CambiarRol","Usuarios")','Id':@item.Usuarios.IdUsuario})" title="Editar Rol"><i class="fa fa-edit" style="color:forestgreen"></i></a>
+                                                                </div>
+
                                                             </div>
-
-                                                            <div class="col-sm-3">
-                                                                <a href="#" data-toggle="modal" data-target="#smallmodal" onclick="modalShow({'NameModalPartial':'#smallModalPartial','Url':'@Url.Action("CambiarRol","Usuarios")','Id':@item.Usuarios.IdUsuario})" title="Editar Rol"><i class="fa fa-edit" style="color:forestgreen"></i></a>
-                                                            </div>
-
-                                                        </div>
-                                                    </td>
-                                                </tr>
+                                                        </td>
+                                                    </tr>
                                                 }
                                             </tbody>
                                         </table>
@@ -151,6 +151,7 @@
     <script src="~/js/dataTableLanguageESConfig.js"></script>
     <script src="~/js/modalConfig.js"></script>
     <script src="~/lib/Microsoft.jQuery.Unobtrusive.Ajax/jquery.unobtrusive-ajax.min.js"></script>
+    <script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
     <script src="~/js/custoSweetAlertAjax.js"></script>
 
 }
