--- a/PreOrclFrontEnd/Views/Usuarios/_CambiarRol.cshtml
+++ b/PreOrclFrontEnd/Views/Usuarios/_CambiarRol.cshtml
@@ -70,4 +70,4 @@
     </div>
 </form>
 
-@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
