--- a/PreOrclFrontEnd/Views/Home/Index.cshtml
+++ b/PreOrclFrontEnd/Views/Home/Index.cshtml
@@ -31,8 +31,7 @@
                             </div>
                             <div class="stat-content">
                                 <div class="text-left dib">
-                                    <div class="stat-text"><span class="count">10</span></div>
-                                    <div class="stat-heading">Casos Pendientes</div>
+                                    <h2>Bufete Jurídico</h2>
                                 </div>
                             </div>
                         </div>
