--- a/PreOrclFrontEnd/Views/Roles/_InactivateOrActivatePartial.cshtml
+++ b/PreOrclFrontEnd/Views/Roles/_InactivateOrActivatePartial.cshtml
@@ -74,4 +74,4 @@
     </div>
 </form>
 
-@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
