--- a/PreOrclFrontEnd/Views/Usuarios/_InactivateOrActivatePartial.cshtml
+++ b/PreOrclFrontEnd/Views/Usuarios/_InactivateOrActivatePartial.cshtml
@@ -63,4 +63,4 @@
     </div>
 </form>
 
-@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+@*@{await Html.RenderPartialAsync("_ValidationScriptsPartial");}*@
